# bipbuffer

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_BipBuffer_threads.cpp
cmake/: CppWarnings.cmake
include/: BipBufferHeader.hpp  BipBufferMemoryLayout.hpp  BipBufferReader.hpp  BipBufferSPMCHeader.hpp  BipBufferSPMCIterator.hpp  BipBufferSPMCReader.hpp  BipBufferSPMCWriter.hpp  BipBufferSPMCWriterReservation.hpp  BipBufferWriter.hpp  BipBufferWriterReservation.hpp  SharedMemory.hpp
src/: BipBufferHeader.cpp  BipBufferMemoryLayout.cpp  BipBufferReader.cpp  BipBufferSPMCWriterReservation.cpp  BipBufferWriter.cpp  BipBufferWriterReservation.cpp  SharedMemory.cpp
tests/: CMakeLists.txt  main.cpp  requires.hpp  test_BipBufferMemoryLayout.cpp  test_BipBufferReader.cpp  test_BipBufferWriter.cpp  test_BipBuffer_threads.cpp  test_SharedMemory.cpp
