file(GLOB_RECURSE TEST_SOURCES "*.cpp")

add_executable(benchmark_shm ${TEST_SOURCES})
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  target_compile_options(benchmark_shm PRIVATE ${CLANG_WARNING_FLAGS})
endif()
target_include_directories(benchmark_shm PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories(benchmark_shm SYSTEM PRIVATE ${CATCH2_INCLUDE_DIRS})
target_link_libraries(benchmark_shm Catch2::Catch2 SharedMemory)
add_test(NAME benchmark_shm COMMAND benchmark_shm --colour-mode ansi)
